Sandbox2/RemoveAds/errs.txt
ld: warning: -multiply_defined is obsolete
warning: no debug symbols in executable (-arch arm64e)
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/strip: warning: input object file already stripped: /Users/az/Desktop/sinfool/Sandbox2/RemoveAds/.theos/obj/arm64e/RemoveAds.dylib
[1mTweak.xm:27:428: [0m[0;1;31merror: [0m[1munknown type name 'GADAdSize'[0m
static GADViewController* (*_logos_orig$_ungrouped$GADViewController$init)(_LOGOS_SELF_TYPE_INIT GADViewController*, SEL) _LOGOS_RETURN_RETAINED; static GADViewController* _logos_method$_ungrouped$GADViewController$init(_LOGOS_SELF_TYPE_INIT GADViewController*, SEL) _LOGOS_RETURN_RETAINED; static void (*_logos_orig$_ungrouped$GADBannerView$setAdSize$andReload$)(_LOGOS_SELF_TYPE_NORMAL GADBannerView* _LOGOS_SELF_CONST, SEL, GADAdSize, BOOL); static void _logos_method$_ungrouped$GADBannerView$setAdSize$andReload$(_LOGOS_SELF_TYPE_NORMAL GADBannerView* _LOGOS_SELF_CONST, SEL, GADAdSize, BOOL); 
[0;1;32m                                                                                                                                                                                                                                                                                                                                                                                                                                           ^
[0m[1mTweak.xm:27:581: [0m[0;1;31merror: [0m[1munknown type name 'GADAdSize'[0m
static GADViewController* (*_logos_orig$_ungrouped$GADViewController$init)(_LOGOS_SELF_TYPE_INIT GADViewController*, SEL) _LOGOS_RETURN_RETAINED; static GADViewController* _logos_method$_ungrouped$GADViewController$init(_LOGOS_SELF_TYPE_INIT GADViewController*, SEL) _LOGOS_RETURN_RETAINED; static void (*_logos_orig$_ungrouped$GADBannerView$setAdSize$andReload$)(_LOGOS_SELF_TYPE_NORMAL GADBannerView* _LOGOS_SELF_CONST, SEL, GADAdSize, BOOL); static void _logos_method$_ungrouped$GADBannerView$setAdSize$andReload$(_LOGOS_SELF_TYPE_NORMAL GADBannerView* _LOGOS_SELF_CONST, SEL, GADAdSize, BOOL); 
[0;1;32m                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    ^
[0m[1mTweak.xm:10:164: [0m[0;1;31merror: [0m[1munknown type name 'GADAdSize'[0m
static void _logos_method$_ungrouped$GADBannerView$setAdSize$andReload$(_LOGOS_SELF_TYPE_NORMAL GADBannerView* _LOGOS_SELF_CONST __unused self, SEL __unused _cmd, GADAdSize arg1, BOOL arg2) {
[0;1;32m                                                                                                                                                                   ^
[0m3 errors generated.
make[3]: *** [/Users/az/theos/makefiles/instance/rules.mk:313: /Users/az/Desktop/sinfool/Sandbox2/RemoveAds/.theos/obj/arm64/Tweak.mm.cbc51e0e.o] Error 1
make[2]: *** [/Users/az/theos/makefiles/instance/library.mk:51: /Users/az/Desktop/sinfool/Sandbox2/RemoveAds/.theos/obj/arm64/RemoveAds.dylib] Error 2
make[1]: *** [/Users/az/theos/makefiles/instance/library.mk:37: internal-library-all_] Error 2
make: *** [/Users/az/theos/makefiles/master/rules.mk:146: RemoveAds.all.tweak.variables] Error 2
